--- a/about.html
+++ b/about.html
@@ -34,7 +34,7 @@
 										<ul>
 											<li><a href="index.html">Home</a></li>
 											<!--<li><a href="elements.html">Rentals</a></li>-->
-											<li><a href="#">Sign Up</a></li>
+											<li><a href="signup.html">Sign Up</a></li>
 											<li><a href="#">Log In</a></li>
 										</ul>
 									</div>
@@ -66,7 +66,7 @@
 								<p>What are you waiting for?</p>
 
 								<ul class = "actions">
-									<li><a href="#" class="button special">SIGN UP NOW</a></li>
+									<li><a href="signup.html" class="button special">SIGN UP NOW</a></li>
 								</ul>
 							</div>
 						</section>
