--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 										<ul>
 											<li><a href="about.html">About Us</a></li>
 											<!--<li><a href="elements.html">Rentals</a></li>-->
-											<li><a href="#">Sign Up</a></li>
+											<li><a href="signup.html">Sign Up</a></li>
 											<li><a href="#">Log In</a></li>
 										</ul>
 									</div>
@@ -140,7 +140,7 @@
 								<p>Register today and start choosing from numerous rental devices with customizable program installations.</p>
 							</header>
 							<ul class="actions vertical">
-								<li><a href="#" class="button fit special">Register</a></li>
+								<li><a href="signup.html" class="button fit special">Register</a></li>
 								<li><a href="#" class="button fit">Browse Rental</a></li>
 							</ul>
 						</div>
