--- a/signup.html
+++ b/signup.html
@@ -27,9 +27,8 @@
 									<div id="menu">
 										<ul>
 											<li><a href="index.html">Home</a></li>
-											<li><a href="generic.html">About Us</a></li>
-											<li><a href="elements.html">Rentals</a></li>
-											<li><a href="#">Sign Up</a></li>
+											<li><a href="about.html">About Us</a></li>
+											<!--<li><a href="elements.html">Rentals</a></li>-->
 											<li><a href="#">Log In</a></li>
 										</ul>
 									</div>
