--- a/signup.html
+++ b/signup.html
@@ -48,14 +48,14 @@
 									<form method="post" action="#">
 										<div class="row uniform">
 											<div class="6u 12u$(xsmall)">
-												<input type="text" name="demo-name" id="demo-name" value="" placeholder="Name" />
+												<input type="text" name="name" id="name" value="" placeholder="Name" required/>
 											</div>
 											<div class="6u$ 12u$(xsmall)">
-												<input type="email" name="demo-email" id="demo-email" value="" placeholder="Email (@virginia.edu)" />
+												<input type="email" name="email" id="email" value="" placeholder="Email (@virginia.edu)" required/>
 											</div>
 											<div class="12u$">
 												<div class="select-wrapper">
-													<select name="demo-category" id="demo-category">
+													<select name="school" id="school" required>
 														<option value="">-School-</option>
 														<option value="1">College of Arts and Sciences</option>
 														<option value="1">School of Engineering and Applied Sciences</option>
@@ -92,7 +92,7 @@
 												<label for="demo-human">Not a robot</label>
 											</div>-->
 											<div class="6u 12u$(large)">
-												<input type="text" name="demo-address" id="demo-address" value="" placeholder="Local Street Address" />
+												<input type="text" name="demo-address" id="demo-address" value="" placeholder="Local Street Address" required/>
 											</div>
 
 											<div class="12u$">
