Added team photo to About Us. More info on form.

--- a/about.html
+++ b/about.html
@@ -52,8 +52,12 @@
 						<section class="wrapper style5">
 							<div class="inner">
 
-								<h3>Our Story</h3>
-								<p>We're a local Charlottesville Business built on the values that technology should be available to everyone. Our motto is "For Students, By Students." As college students, we understand the difficulties of finding the best laptop. Buying a new computer can be a pretty big investment as well. For some students, it's difficult to find the perfect computer for all your needs. Some go about buying expensive software just for one class in a single semester! Here at P.C.Tingles, we allow you to purchase or rent computers/tablets for all your needs... preinstalled with software for all your classes!</p>
+								<h3>Our Story<span class="image right">
+									<img src="images/team.jpg" alt>
+								</span></h3>
+								<p>
+								
+								We're a local Charlottesville Business built on the values that technology should be available to everyone. Our motto is "For Students, By Students." As college students, we understand the difficulties of finding the best laptop. Buying a new computer can be a pretty big investment as well. For some students, it's difficult to find the perfect computer for all your needs. Some go about buying expensive software just for one class in a single semester! Here at P.C.Tingles, we allow you to purchase or rent computers/tablets for all your needs... preinstalled with software for all your classes!</p>
 
 								<p>Finding the perfect computer shouldn't be difficult.</p>
 
