--- a/signup.html
+++ b/signup.html
@@ -91,7 +91,16 @@
 												<label for="demo-human">Not a robot</label>
 											</div>-->
 											<div class="6u 12u$(large)">
-												<input type="text" name="demo-address" id="demo-address" value="" placeholder="Local Street Address" required/>
+												<input type="text" name="address" id="address" value="" placeholder="Local Street Address" required/>
+											</div>
+											<div class="4u 12u$(xxsmall)">
+												<input type="text" name="city" id="city" value="" placeholder="City" required/>
+											</div>
+											<div class="2u 12u$(xxxsmall)">
+												<input type="text" name="state" id="state" value="" placeholder="State (XX)" required/>
+											</div>
+											<div class="3u 12u$(xxsmall)">
+												<input type="text" name="zip-code" id="zip-code" value="" placeholder="5 Digit ZIP Code" required/>
 											</div>
 
 											<div class="12u$">
