Added password field

--- a/signup.html
+++ b/signup.html
@@ -52,6 +52,12 @@
 											<div class="6u$ 12u$(xsmall)">
 												<input type="email" name="email" id="email" value="" placeholder="Email (@virginia.edu)" required/>
 											</div>
+											<div class="6u 12u$(xsmall)">
+												<input type="password" name="password" id="password" value="" placeholder="Enter Password" required/>
+											</div>
+											<div class="6u 12u$(xsmall)">
+												<input type="password" name="password" id="password" value="" placeholder="Verify Password" required/>
+											</div>
 											<div class="12u$">
 												<div class="select-wrapper">
 													<select name="school" id="school" required>
