checkmark image style changes

--- a/confirm.html
+++ b/confirm.html
@@ -46,7 +46,7 @@
 									<h2 class="align-center"><span class="image checkmark"><img src="images/check_mark.png" alt="" /></span>Thank You!</h2>
 
 									<p class="align-center">Thank you for considering PC Tingles. This page serves as a confirmation that your information has been recorded successfully. You should be receiving an email very soon.</p>
-									<p class="align-center">Go Hoos!!!</p>
+									<p class="align-center">Go Hoos!!</p>
 									
 								</section>
 
