--- a/signup.html
+++ b/signup.html
@@ -50,7 +50,7 @@
 												<input type="text" name="name" id="name" value="" placeholder="Name" required/>
 											</div>
 											<div class="6u$ 12u$(xsmall)">
-												<input type="email" name="email" id="email" value="" placeholder="Email (@virginia.edu)" required/>
+												<input type="email" name="email" id="email" value="" placeholder="Email (e.g. mst3k@virginia.edu)" required/>
 											</div>
 											<div class="6u 12u$(xsmall)">
 												<input type="password" name="password" id="password" value="" placeholder="Enter Password" required/>
