--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
 											<!--<li><a href="elements.html">Rentals</a></li>-->
 											<li><a href="signup.html">Sign Up</a></li>
 											<li><a href="#">Log In</a></li>
+											<li><a href="sales.html">Shop Now</a></li>
 										</ul>
 									</div>
 								</li>
@@ -47,7 +48,7 @@
 							for students : by students<br />
 							
 							<ul class="actions">
-								<li><a href="#" class="button special">Shop Rentals</a></li>
+								<li><a href="sales.html" class="button special">Shop Now</a></li>
 							</ul>
 						</div>
 						<a href="#one" class="more scrolly">Learn More</a>
@@ -141,7 +142,7 @@
 							</header>
 							<ul class="actions vertical">
 								<li><a href="signup.html" class="button fit special">Register</a></li>
-								<li><a href="#" class="button fit">Browse Rental</a></li>
+								<li><a href="sales.html" class="button fit">Shop Now</a></li>
 							</ul>
 						</div>
 					</section>
