Added sale cancellation and completion pages

--- a/confirm.html
+++ b/confirm.html
@@ -4,7 +4,7 @@
 -->
 <html>
 	<head>
-		<title>Confirmation | PC Tingles</title>
+		<title>Confirmation | P.C.Tingles</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<!--[if lte IE 8]><script src="assets/js/ie/html5shiv.js"></script><![endif]-->
@@ -28,6 +28,7 @@
 										<ul>
 											<li><a href="index.html">Home</a></li>
 											<li><a href="about.html">About Us</a></li>
+                                            <li><a href="sales.html">Rentals</a></li>
 											<!--<li><a href="elements.html">Rentals</a></li>-->
 											<li><a href="#">Log In</a></li>
 										</ul>
