--- a/index.html
+++ b/index.html
@@ -30,9 +30,9 @@
 										<ul>
 											<li><a href="about.html">About Us</a></li>
 											<!--<li><a href="elements.html">Rentals</a></li>-->
+                                            <li><a href="sales.html">Rentals</a></li>
 											<li><a href="signup.html">Sign Up</a></li>
 											<li><a href="#">Log In</a></li>
-											<li><a href="sales.html">Shop Now</a></li>
 										</ul>
 									</div>
 								</li>
