--- a/signup.html
+++ b/signup.html
@@ -47,16 +47,20 @@
 									<h4>Registration Page</h4>
 									<form method="post" action="registerUser.php">
 										<div class="row uniform">
-											<div class="6u 12u$(xsmall)">
-												<input type="text" name="name" id="name" value="" placeholder="Name" pattern="[a-zA-Z ]+" title="Letters Only" required/>
+                                            <div class="6u 12u$(xsmall)">
+                                                <th>Name</th>
+												<input type="text" name="name" id="name" value="" placeholder="First Last" pattern="[a-zA-Z ]+" title="Letters Only" required/>
 											</div>
 											<div class="6u$ 12u$(xsmall)">
-												<input type="email" name="email" id="email" value="" placeholder="Email (e.g. mst3k@virginia.edu)" required/>
+                                                <th>Email</th>
+												<input type="email" name="email" id="email" value="" placeholder="e.g. mst3k@virginia.edu" required/>
 											</div>
 											<div class="6u 12u$(xsmall)">
+                                                <th>Password</th>
 												<input type="password" name="password" id="password" value="" placeholder="Enter Password" required/>
 											</div>
 											<div class="6u 12u$(xsmall)">
+                                                <th>Confirm Password</th>
 												<input type="password" name="password" id="password_verify" value="" placeholder="Verify Password" required/>
 											</div>
 											<div class="12u$">
@@ -88,31 +92,90 @@
 												<input type="radio" id="demo-priority-4" name="year" value="fourth">
 												<label for="demo-priority-4">4th Year/Graduate</label>
 											</div>
-									
-											<div class="12u$ 12u$(small)">
-												<input type="checkbox" id="newsletter" name="newsletter">
-												<label for="newsletter">Sign me up for Newsletters!</label>
-											</div>
 											<!--<div class="6u$ 12u$(small)">
 												<input type="checkbox" id="demo-human" name="demo-human" checked>
 												<label for="demo-human">Not a robot</label>
 											</div>-->
 											<div class="12u$ 12u$(large)">
-												<input type="text" name="address" id="address" value="" placeholder="Local Street Address" required/>
+                                                <th>Local Street Address</th>
+												<input type="text" name="address" id="address" value="" placeholder="e.g. 85 Engineer's Way" required/>
 											</div>
 											<div class="7u 12u$(xxsmall)">
-												<input type="text" name="city" id="city" value="" placeholder="City" pattern="[a-zA-Z ]+" title="Letters Only." required/>
+                                                <th>City</th>
+												<input type="text" name="city" id="city" value="" placeholder="e.g. Charlottesville" pattern="[a-zA-Z ]+" title="Letters Only." required/>
 											</div>
 											<div class="2u 12u$(xxxsmall)">
-												<input type="text" name="state" id="state" pattern ="[a-zA-z]{2}" title="Two Letters Only" value="" placeholder="State (XX)" required/>
+                                                <th>State</th>
+												<!--<input type="text" name="state" id="state" pattern ="[a-zA-z]{2}" title="Two Letters Only" value="" placeholder="e.g. VA" required/>-->
+                                                <div class="select-wrapper">
+                                                    <select name="state" id="state" required>
+                                                        <option value="">-State-</option>
+                                                        <option value="AL">Alabama</option>
+                                                        <option value="AK">Alaska</option>
+                                                        <option value="AZ">Arizona</option>
+                                                        <option value="AR">Arkansas</option>
+                                                        <option value="CA">California</option>
+                                                        <option value="CO">Colorado</option>
+                                                        <option value="CT">Connecticut</option>
+                                                        <option value="DE">Delaware</option>
+                                                        <option value="FL">Florida</option>
+                                                        <option value="GA">Georgia</option>
+                                                        <option value="HI">Hawaii</option>
+                                                        <option value="ID">Idaho</option>
+                                                        <option value="IL">Illinois</option>
+                                                        <option value="IN">Indiana</option>
+                                                        <option value="IA">Iowa</option>
+                                                        <option value="KS">Kansas</option>
+                                                        <option value="KY">Kentucky</option>
+                                                        <option value="LA">Louisiana</option>
+                                                        <option value="ME">Maine</option>
+                                                        <option value="MD">Maryland</option>
+                                                        <option value="MA">Massachusetts</option>
+                                                        <option value="MI">Michigan</option>
+                                                        <option value="MN">Minnesota</option>
+                                                        <option value="MS">Mississippi</option>
+                                                        <option value="MO">Missouri</option>
+                                                        <option value="MT">Montana</option>
+                                                        <option value="NE">Nebraska</option>
+                                                        <option value="NV">Nevada</option>
+                                                        <option value="NH">New Hampshire</option>
+                                                        <option value="NJ">New Jersey</option>
+                                                        <option value="NM">New Mexico</option>
+                                                        <option value="NY">New York</option>
+                                                        <option value="NC">North Carolina</option>
+                                                        <option value="ND">North Dakota</option>
+                                                        <option value="OH">Ohio</option>
+                                                        <option value="OK">Oklahoma</option>
+                                                        <option value="OR">Oregon</option>
+                                                        <option value="PA">Pennsylvania</option>
+                                                        <option value="RI">Rhode Island</option>
+                                                        <option value="SC">South Carolina</option>
+                                                        <option value="SD">South Dakota</option>
+                                                        <option value="TN">Tennessee</option>
+                                                        <option value="TX">Texas</option>
+                                                        <option value="UT">Utah</option>
+                                                        <option value="VT">Vermont</option>
+                                                        <option value="VA">Virginia</option>
+                                                        <option value="WA">Washington</option>
+                                                        <option value="WV">West Virginia</option>
+                                                        <option value="WI">Wisconsin</option>
+                                                        <option value="WY">Wyoming</option>
+                                                    </select>
+                                                </div>
 											</div>
 											<div class="3u 12u$(xxsmall)">
-												<input type="text" name="zip-code" id="zip-code" value="" placeholder="5 Digit ZIP Code" pattern="[0-9]{5}" title="5 Numbers Only." required/>
+                                                <th>Zip Code</th>
+												<input type="text" name="zip-code" id="zip-code" value="" placeholder="e.g. 22903" pattern="[0-9]{5}" title="5 Numbers Only." required/>
 											</div>
 
 											<div class="12u$">
-												<textarea name="demo-message" id="demo-message" placeholder="Additional Information for Us?" rows="6"></textarea>
+                                                <th>Additional Information</th>
+												<textarea name="demo-message" id="demo-message" placeholder="Any additional information for us?" rows="6"></textarea>
 											</div>
+                                            <div class="12u$ 12u$(small)">
+                                                <input type="checkbox" id="newsletter" name="newsletter">
+                                                    <label for="newsletter">Sign me up for Newsletters!</label>
+                                                    </div>
 											<div class="12u$">
 												<ul class="actions">
 													<li><input type="submit" value="Sign Up Now!" class="special" /></li>
