Headers and dropdown menus

--- a/about.html
+++ b/about.html
@@ -48,7 +48,8 @@
 					<article id="main">
 						<header>
 							<h2>Why P.C.Tingles?</h2>
-							<p>A Tech Rental Company For Students, By Students</p>
+							<p>A Tech Rental Company <br />
+                            For Students : By Students<br />
 						</header>
 						<section class="wrapper style5">
 							<div class="inner">
