Linked buttons to html files

--- a/generic.html
+++ b/generic.html
@@ -30,9 +30,8 @@
 										<ul>
 											<li><a href="index.html">Home</a></li>
 											<li><a href="generic.html">About Us</a></li>
-											<li><a href="elements.html">Rentals</a></li>
-											<li><a href="#">Sign Up</a></li>
-											<li><a href="#">Log In</a></li>
+											<li><a href="signup.html">Sign Up</a></li>
+											<li><a href="login.html">Log In</a></li>
 										</ul>
 									</div>
 								</li>
@@ -75,8 +74,7 @@
 							<li><a href="#" class="icon fa-envelope-o"><span class="label">Email</span></a></li>
 						</ul>
 						<ul class="copyright">
-							<li>&copy; P.C.Tingles</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
-						</ul>
+							<li>&copy; P.C.Tingles</li>						</ul>
 					</footer>
 
 			</div>
