--- a/index.html
+++ b/index.html
@@ -29,10 +29,8 @@
 									<div id="menu">
 										<ul>
 											<li><a href="about.html">About Us</a></li>
-											<!--<li><a href="elements.html">Rentals</a></li>-->
-                                            <li><a href="sales.html">Rentals</a></li>
 											<li><a href="signup.html">Sign Up</a></li>
-											<li><a href="#">Log In</a></li>
+											<li><a href="login.html">Log In</a></li>
 										</ul>
 									</div>
 								</li>
@@ -48,7 +46,7 @@
 							for students : by students<br />
 							
 							<ul class="actions">
-								<li><a href="sales.html" class="button special">Shop Now</a></li>
+								<li><a href="login.html" class="button special">Log In</a></li>
 							</ul>
 						</div>
 						<a href="#one" class="more scrolly">Learn More</a>
@@ -142,7 +140,7 @@
 							</header>
 							<ul class="actions vertical">
 								<li><a href="signup.html" class="button fit special">Register</a></li>
-								<li><a href="sales.html" class="button fit">Shop Now</a></li>
+								<li><a href="about.html" class="button fit">About Us</a></li>
 							</ul>
 						</div>
 					</section>
