--- a/mem_support.html
+++ b/mem_support.html
@@ -28,9 +28,7 @@
 										<ul>
 											<li><a href="index.html">Home</a></li>
 											<li><a href="about.html">About Us</a></li>
-                                            <li><a href="sales.html">Rentals</a></li>
-											<!--<li><a href="elements.html">Rentals</a></li>-->
-											<li><a href="#">Log In</a></li>
+											<li><a href="#">Log Out</a></li>
 										</ul>
 									</div>
 								</li>
@@ -60,7 +58,7 @@
 											<div class="12u$">
 												<ul class="actions">
 													<li><input type="submit" value="Send Request" class="special" /></li>
-													<li><input type="reset" value="Reset" /></li>
+													<li><a href="mem_index.html" class="button">Go Back</a></li>
 												</ul>
 											</div>
 										</div>
