--- a/salecomplete.html
+++ b/salecomplete.html
@@ -28,10 +28,7 @@
 										<ul>
 											<li><a href="index.html">Home</a></li>
 											<li><a href="about.html">About Us</a></li>
-                                            <li><a hret="sales.html">Rentals</a></li>
-											<li><a href="signup.html">Sign Up</a></li>
-											<!--<li><a href="elements.html">Rentals</a></li>-->
-											<li><a href="#">Log In</a></li>
+											<li><a href="#">Log Out</a></li>
 										</ul>
 									</div>
 								</li>
@@ -48,7 +45,7 @@
 									<h2 class="align-center"><span class="image checkmark"><img src="images/check_mark.png" alt="" /></span>Order Received!</h2>
                                     
                                     <p class="align-center">Thank you for your purchase with P.C.Tingles! This page serves as a confirmation that your order was properly received. We'll start preparing your item and you will receive an email from us very soon!</p>
-									<p class="align-center"><p class="align-center"><a href="sales.html" class="button">Shop More</a></p></p>
+									<p class="align-center"><p class="align-center"><a href="mem_index.html" class="button">Shop More</a></p></p>
 									<p class="align-center"><p class="align-center"><a href="index.html" class="button special">Go Home</a></p></p>
                                     
 								</section>
