--- a/about.html
+++ b/about.html
@@ -33,10 +33,8 @@
 									<div id="menu">
 										<ul>
 											<li><a href="index.html">Home</a></li>
-                                            <li><a href="sales.html">Rentals</a></li>
-											<!--<li><a href="elements.html">Rentals</a></li>-->
 											<li><a href="signup.html">Sign Up</a></li>
-											<li><a href="#">Log In</a></li>
+											<li><a href="login.html">Log In</a></li>
 										</ul>
 									</div>
 								</li>
