--- a/login_fail.html
+++ b/login_fail.html
@@ -28,10 +28,8 @@
 										<ul>
 											<li><a href="index.html">Home</a></li>
 											<li><a href="about.html">About Us</a></li>
-                                            <li><a hret="sales.html">Rentals</a></li>
 											<li><a href="signup.html">Sign Up</a></li>
-											<!--<li><a href="elements.html">Rentals</a></li>-->
-											<li><a href="#">Log In</a></li>
+											<li><a href="login.html">Log In</a></li>
 										</ul>
 									</div>
 								</li>
