--- a/login.html
+++ b/login.html
@@ -29,7 +29,7 @@
 											<li><a href="index.html">Home</a></li>
 											<li><a href="about.html">About Us</a></li>
                                             <li><a href="signup.html">Sign Up</a></li>
-											<li><a href="login.html">Log In</a></li>
+											<li><?php if(isset($_SESSION["name"])) { echo "<a href=\"login.html\">Log In</a>"; } else { echo "<a href=\"mem_index.php\">Member Home</a>";} ?></li>
 										</ul>
 									</div>
 								</li>
@@ -44,7 +44,7 @@
 
 								<section>
 									<h4>Member Login</h4>
-									<form method="post" action=""><!--FORM-->
+									<form method="post" action="login.php"><!--FORM-->
 										<div class="row uniform">
 											<div class="6u$ 12u$(xsmall)">
                                                 <th>Email</th>
