--- a/salecancel.html
+++ b/salecancel.html
@@ -28,7 +28,7 @@
 										<ul>
 											<li><a href="index.html">Home</a></li>
 											<li><a href="about.html">About Us</a></li>
-											<li><a href="#">Log Out</a></li>
+											<li><a href="logout.php">Log Out</a></li>
 										</ul>
 									</div>
 								</li>
@@ -45,7 +45,7 @@
 									<h2 class="align-center"><span class="image checkmark"><img src="images/cancel_mark.png" alt="" /></span>Your Order has Been Cancelled</h2>
                                     
                                     <p class="align-center">This page confirms that your order has been successfully cancelled.</p>
-									<p class="align-center"><p class="align-center"><a href="mem_index.html" class="button">Shop Again</a></p></p>
+									<p class="align-center"><p class="align-center"><a href="mem_index.php" class="button">Shop Again</a></p></p>
 									<p class="align-center"><p class="align-center"><a href="index.html" class="button special">Go Home</a></p></p>
                                     
 								</section>
