--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 										<ul>
 											<li><a href="about.html">About Us</a></li>
 											<li><a href="signup.html">Sign Up</a></li>
-											<li><?php if(isset($_SESSION["name"])) { echo "<a href=\"login.html\">Log In</a>"; } else { echo "<a href=\"mem_index.php\">Member Home</a>";} ?></li>
+											<li><?php if(!isset($_SESSION["name"])) { echo "<a href=\"login.html\">Log In</a>"; } else { echo "<a href=\"mem_index.php\">Member Home</a>";} ?></li>
 										</ul>
 									</div>
 								</li>
