--- a/login.html
+++ b/login.html
@@ -1,4 +1,10 @@
 <!DOCTYPE HTML>
+<?php
+session_start();
+if(isset($_SESSION["name"])) {
+	header("Location: mem_index.html");
+}
+?>
 <!--
 	felix
 -->
@@ -29,7 +35,7 @@
 											<li><a href="index.html">Home</a></li>
 											<li><a href="about.html">About Us</a></li>
                                             <li><a href="signup.html">Sign Up</a></li>
-											<li><?php if(isset($_SESSION["name"])) { echo "<a href=\"login.html\">Log In</a>"; } else { echo "<a href=\"mem_index.php\">Member Home</a>";} ?></li>
+											<li><?php if(!isset($_SESSION["name"])) { echo "<a href=\"login.html\">Log In</a>"; } else { echo "<a href=\"mem_index.php\">Member Home</a>";} ?></li>
 										</ul>
 									</div>
 								</li>
