Fixed that issue with the login vs member home

--- a/login.html
+++ b/login.html
@@ -2,7 +2,7 @@
 <?php
 session_start();
 if(isset($_SESSION["name"])) {
-	header("Location: mem_index.html");
+	header("Location: mem_index.php");
 }
 ?>
 <!--
